<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/dividerHorizontal"
        android:dividerPadding="8dip"
        android:orientation="vertical"
        android:showDividers="middle" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:background="@color/light_gray"
            android:layout_weight="1"
            android:elevation="2dp"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="50dp"
                android:scaleType="center"
                android:src="@drawable/take_picture"
                android:background="@xml/rounded_button"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:attr/dividerVertical"
                android:dividerPadding="8dip"
                android:orientation="horizontal"
                android:showDividers="middle" >

                <Button
                    android:id="@+id/btn_tab_sign_in"
                    android:background="@xml/button_bottom_stroke"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_sign_in" />

                <Button
                    android:id="@+id/btn_tab_sign_up"
                    android:background="@xml/button_bottom_no_border"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_sign_up" />
            </LinearLayout>
        </LinearLayout>
        <ViewFlipper
            android:id="@+id/flipper"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/sign_in_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical" >
                <com.armor.brelo.ui.custom.BreloTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sign_in_username"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <com.armor.brelo.ui.custom.BreloTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/label_sign_in_password"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_up_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical" >
                <com.armor.brelo.ui.custom.BreloTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sign_up_fullname"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <com.armor.brelo.ui.custom.BreloTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sign_up_email"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />
                <com.armor.brelo.ui.custom.BreloTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sign_up_phonenumber"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    />

                <com.armor.brelo.ui.custom.BreloTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/label_sign_in_password"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </LinearLayout>
        </ViewFlipper>
        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/btn_sign_in"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>